# fxsociety

./: .gitignore  AGENTS.md  index.html  passenger_wsgi.py  requirements.txt
admin/: index.html
admin-frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
api/: auth.py  authentication.py  crm.py  jwt.py  orders.py  serializers.py  tickets.py
assets/: AboutPage-B3ou2ws-.js  AboutPage-BLMSHioZ.js  AboutPage-Cj4NI_42.js  AboutPage-DTmHoH1c.js  AboutPage-LslWyYcj.js  AboutPage-hJI6_myS.js  AboutPage-oZ6MSi6g.js  Accordion-B6kk27Kl.js  Accordion-BFsziUNc.js  Accordion-Bokq-Aqz.js  Accordion-BvLSrNBa.js  Accordion-CGM05wcM.js  Accordion-DMuP5dB8.js  Accordion-DaXQynxe.js  Badge-BMFXYMIO.js  Badge-Cb-nKqo6.js  Badge-DFohYmgh.js  Badge-DWxUq_As.js  Badge-DxZ6aVCC.js  Badge-FEYFyj8a.js  Badge-edll3aJA.js  HomePage-BPAPeKew.js  HomePage-CHdQtwa5.js  HomePage-CkNJS3fr.js  HomePage-D5Vj9jEc.js  HomePage-DEILJMlA.js  HomePage-ERY146Ds.js  HomePage-T719zTW7.js  HowItWorksPage-7WCD1Hrl.js  HowItWorksPage-C-BA-7Sw.js  HowItWorksPage-C6JA45fT.js  HowItWorksPage-CHexa94B.js  HowItWorksPage-DFtZUjrq.js  HowItWorksPage-iE0ZJcya.js  HowItWorksPage-wKbarTNP.js  LoginPage-BGlBgCQn.js  LoginPage-B_EP-_k9.js  LoginPage-BmaEljZ3.js  LoginPage-DNKej5-G.js  LoginPage-DYZ1Uvf4.js  (+108 more)
backend/: .gitignore  README.md  fxsociety.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  database.py  limiter.py  main.py  seed.py
backend/app/models/: __init__.py  crm.py  order.py  product.py  ticket.py  user.py
backend/app/routers/: __init__.py  auth.py  crm.py  orders.py  products.py  tickets.py
backend/app/schemas/: __init__.py  crm.py  order.py  product.py  ticket.py  user.py
backend/app/utils/: activity.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_crm.py  test_health.py  test_orders.py  test_products.py
backend2/: README.md  manage.py  passenger_wsgi.py  pyproject.toml  pytest.ini
backend2/api/: auth_helpers.py  permissions.py  products.py
backend2/fxsociety_drf/: env.py
backend2/legacydb/: models.py
docs/: API_REQUIREMENTS.md  deploy-vercel.md
frontend/: README.md  eslint.config.js  index.html  (+3 more)
(+137 files in other folders)
